--- a/projects/wq/grandcanyon/index.html
+++ b/projects/wq/grandcanyon/index.html
@@ -288,7 +288,7 @@
         <div class="container-fluid">
           <div class="row">
 
-            <h2>River Discharge Forecasts</h2>
+            <h3>River Discharge Forecast</h3>
             <div class="accordion" id="accordionExample">
               <!-- NEW ITEM -->
               <div class="accordion-item">
@@ -301,11 +301,10 @@
                 <div id="collapseFLOW" class="accordion-collapse collapse" aria-labelledby="GCDQ">
                   <div class="accordion-body">
                     <div class="row">
-                      <div class="col-xl-12">
+                      <div class="col-xl-12 col-lg-12">
                         <div class="card shadow mb-4">
-                          <!-- <h5 class="card-header">Air Temperature</h5> -->
                           <div class="card-body">
-                            <div class="responsive-plot" id="plotDischargeGCD" data-siteID="GCD">
+                            <div class="responsive-plot" id="flowGCD" data-key="GCD">
                             </div>
                           </div>
                         </div>
@@ -325,11 +324,10 @@
                 <div id="collapseFLOW" class="accordion-collapse collapse" aria-labelledby="RM0Q">
                   <div class="accordion-body">
                     <div class="row">
-                      <div class="col-xl-12">
+                      <div class="col-xl-12 col-lg-12">
                         <div class="card shadow mb-4">
-                          <!-- <h5 class="card-header">Air Temperature</h5> -->
                           <div class="card-body">
-                            <div class="responsive-plot" id="plotDischargeRM0" data-siteID="RM0">
+                            <div class="responsive-plot" id="flowRM0" data-key="RM0">
                             </div>
                           </div>
                         </div>
@@ -349,11 +347,10 @@
                 <div id="collapseFLOW" class="accordion-collapse collapse" aria-labelledby="RM88Q">
                   <div class="accordion-body">
                     <div class="row">
-                      <div class="col-xl-12">
+                      <div class="col-xl-12 col-lg-12">
                         <div class="card shadow mb-4">
-                          <!-- <h5 class="card-header">Air Temperature</h5> -->
                           <div class="card-body">
-                            <div class="responsive-plot" id="plotDischargeRM88" data-siteID="RM88">
+                            <div class="responsive-plot" id="flowRM88" data-key="RM88">
                             </div>
                           </div>
                         </div>
@@ -373,11 +370,10 @@
                 <div id="collapseFLOW" class="accordion-collapse collapse" aria-labelledby="RM226Q">
                   <div class="accordion-body">
                     <div class="row">
-                      <div class="col-xl-12">
+                      <div class="col-xl-12 col-lg-12">
                         <div class="card shadow mb-4">
-                          <!-- <h5 class="card-header">Air Temperature</h5> -->
                           <div class="card-body">
-                            <div class="responsive-plot" id="plotDischargeRM226" data-siteID="RM226">
+                            <div class="responsive-plot" id="flowRM226" data-key="RM226">
                             </div>
                           </div>
                         </div>
@@ -389,7 +385,7 @@
 
             </div>
 
-            <h2>River Temperature Forecasts</h2>
+            <h3>River Temperature Forecasts</h3>
             <div class="accordion" id="accordionExample">
               <!-- NEW ITEM -->
               <div class="accordion-item">
@@ -402,11 +398,10 @@
                 <div id="collapseTEMP" class="accordion-collapse collapse" aria-labelledby="GCDT">
                   <div class="accordion-body">
                     <div class="row">
-                      <div class="col-xl-12">
+                      <div class="col-xl-12 col-lg-12">
                         <div class="card shadow mb-4">
-                          <!-- <h5 class="card-header">Air Temperature</h5> -->
                           <div class="card-body">
-                            <div class="responsive-plot" id="plotTemperatureGCD" data-siteID="GCD">
+                            <div class="responsive-plot" id="tempGCD" data-key="GCD">
                             </div>
                           </div>
                         </div>
@@ -426,11 +421,10 @@
                 <div id="collapseTEMP" class="accordion-collapse collapse" aria-labelledby="RM0T">
                   <div class="accordion-body">
                     <div class="row">
-                      <div class="col-xl-12">
+                      <div class="col-xl-12 col-lg-12">
                         <div class="card shadow mb-4">
-                          <!-- <h5 class="card-header">Air Temperature</h5> -->
                           <div class="card-body">
-                            <div class="responsive-plot" id="plotTemperatureRM0" data-siteID="RM0">
+                            <div class="responsive-plot" id="tempRM0" data-key="RM0">
                             </div>
                           </div>
                         </div>
@@ -450,11 +444,10 @@
                 <div id="collapseTEMP" class="accordion-collapse collapse" aria-labelledby="RM0T">
                   <div class="accordion-body">
                     <div class="row">
-                      <div class="col-xl-12">
+                      <div class="col-xl-12 col-lg-12">
                         <div class="card shadow mb-4">
-                          <!-- <h5 class="card-header">Air Temperature</h5> -->
                           <div class="card-body">
-                            <div class="responsive-plot" id="plotTemperatureRM61" data-siteID="RM61">
+                            <div class="responsive-plot" id="tempRM61" data-key="RM61">
                             </div>
                           </div>
                         </div>
@@ -474,11 +467,10 @@
                 <div id="collapseTEMP" class="accordion-collapse collapse" aria-labelledby="RM0T">
                   <div class="accordion-body">
                     <div class="row">
-                      <div class="col-xl-12">
+                      <div class="col-xl-12 col-lg-12">
                         <div class="card shadow mb-4">
-                          <!-- <h5 class="card-header">Air Temperature</h5> -->
                           <div class="card-body">
-                            <div class="responsive-plot" id="plotTemperatureRM88" data-siteID="RM88">
+                            <div class="responsive-plot" id="tempRM88" data-key="RM88">
                             </div>
                           </div>
                         </div>
@@ -498,11 +490,10 @@
                 <div id="collapseTEMP" class="accordion-collapse collapse" aria-labelledby="RM0T">
                   <div class="accordion-body">
                     <div class="row">
-                      <div class="col-xl-12">
+                      <div class="col-xl-12 col-lg-12">
                         <div class="card shadow mb-4">
-                          <!-- <h5 class="card-header">Air Temperature</h5> -->
                           <div class="card-body">
-                            <div class="responsive-plot" id="plotTemperatureRM226" data-siteID="RM226">
+                            <div class="responsive-plot" id="tempRM226" data-key="RM226">
                             </div>
                           </div>
                         </div>
@@ -521,15 +512,8 @@
   </main>
 
   <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/plot_discharge_GCD.js"></script>
-  <script src="js/plot_discharge_RM0.js"></script>
-  <script src="js/plot_discharge_RM88.js"></script>
-  <script src="js/plot_discharge_RM226.js"></script>
-  <script src="js/plot_temperature_GCD.js"></script>
-  <script src="js/plot_temperature_RM0.js"></script>
-  <script src="js/plot_temperature_RM61.js"></script>
-  <script src="js/plot_temperature_RM88.js"></script>
-  <script src="js/plot_temperature_RM226.js"></script>
+  <script src="js/script_flow.js"></script>
+  <script src="js/script_temp.js"></script>
 
 </body>
 
