--- a/projects/wq/grandcanyon/index.html
+++ b/projects/wq/grandcanyon/index.html
@@ -382,17 +382,25 @@
                   </div>
                 </div>
               </div>
-
             </div>
 
-            <h3>River Temperature Forecasts</h3>
-            <div class="accordion" id="accordionExample">
-              <!-- NEW ITEM -->
+            <div class="row">
+              <div class="col-xl-12 col-lg-12">
+                <div class="card shadow mb-4">
+                  <div class="card-body">
+                    <div class="responsive-plot" id="tempGCD" data-key="GCD">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
+            <!-- <div class="accordion" id="accordionExample">
               <div class="accordion-item">
                 <h2 class="accordion-header" id="GCDT">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseTEMP" aria-expanded="false" aria-controls="collapseTEMP">
-                    RM-15.7 (Glen Canyon Dam)
+                    River Temperature Forecasts
                   </button>
                 </h2>
                 <div id="collapseTEMP" class="accordion-collapse collapse" aria-labelledby="GCDT">
@@ -409,101 +417,8 @@
                     </div>
                   </div>
                 </div>
-              </div>
-              <!-- NEW ITEM -->
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="RM0T">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseTEMP" aria-expanded="false" aria-controls="collapseTEMP">
-                    RM0 (Lees Ferry)
-                  </button>
-                </h2>
-                <div id="collapseTEMP" class="accordion-collapse collapse" aria-labelledby="RM0T">
-                  <div class="accordion-body">
-                    <div class="row">
-                      <div class="col-xl-12 col-lg-12">
-                        <div class="card shadow mb-4">
-                          <div class="card-body">
-                            <div class="responsive-plot" id="tempRM0" data-key="RM0">
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- NEW ITEM -->
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="RM0T">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseTEMP" aria-expanded="false" aria-controls="collapseTEMP">
-                    RM61 (Above LCR)
-                  </button>
-                </h2>
-                <div id="collapseTEMP" class="accordion-collapse collapse" aria-labelledby="RM0T">
-                  <div class="accordion-body">
-                    <div class="row">
-                      <div class="col-xl-12 col-lg-12">
-                        <div class="card shadow mb-4">
-                          <div class="card-body">
-                            <div class="responsive-plot" id="tempRM61" data-key="RM61">
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- NEW ITEM -->
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="RM0T">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseTEMP" aria-expanded="false" aria-controls="collapseTEMP">
-                    RM88 (Grand Canyon)
-                  </button>
-                </h2>
-                <div id="collapseTEMP" class="accordion-collapse collapse" aria-labelledby="RM0T">
-                  <div class="accordion-body">
-                    <div class="row">
-                      <div class="col-xl-12 col-lg-12">
-                        <div class="card shadow mb-4">
-                          <div class="card-body">
-                            <div class="responsive-plot" id="tempRM88" data-key="RM88">
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- NEW ITEM -->
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="RM0T">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseTEMP" aria-expanded="false" aria-controls="collapseTEMP">
-                    RM226 (Diamond Creek)
-                  </button>
-                </h2>
-                <div id="collapseTEMP" class="accordion-collapse collapse" aria-labelledby="RM0T">
-                  <div class="accordion-body">
-                    <div class="row">
-                      <div class="col-xl-12 col-lg-12">
-                        <div class="card shadow mb-4">
-                          <div class="card-body">
-                            <div class="responsive-plot" id="tempRM226" data-key="RM226">
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-            </div>
+              </div>              
+            </div> -->
 
           </div>
         </div>
